[lib]
proc-macro = true

[[bin]]
name = "test_lib"
path = "./src/bin/test_lib.rs"

[package]
name = "worm_derive"
version = "0.1.0"
edition = "2018"

[dependencies]
darling = "0.13"
dotenv = "0.15"
quote = "1"
syn = "1"
rusqlite = { version = "0.25", features = [ "bundled", "chrono" ] }
worm = { git = "https://github.com/frankiebaffa/worm", branch = "master" }
